--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 APP_ENV=local
 APP_DEBUG=true
-APP_KEY=YpaudN9qJM9Qs5dFHW9b2NF4EuSGsDyr
-APP_TIMEZONE=Asia/Bangkok
+APP_KEY=
+APP_TIMEZONE=UTC
 
 LOG_CHANNEL=stack
 LOG_SLACK_WEBHOOK_URL=
@@ -9,9 +9,9 @@ LOG_SLACK_WEBHOOK_URL=
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=queue
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=homestead
+DB_USERNAME=homestead
+DB_PASSWORD=secret
 
 CACHE_DRIVER=file
 QUEUE_DRIVER=sync
